--- a/simpleForm.html
+++ b/simpleForm.html
@@ -60,9 +60,10 @@
     text.addEventListener('input', function(){
      let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
      if(nameRegex.test(text.Value))
+     textError.textContent="";
      textError.textContent = "Name is incorrect";
     });
- 
+
     const salary = document.querySelector('#salary');
     const output = document.querySelector('.salary-output');
     output.textContent = salary.Value;
