--- a/simpleForm.html
+++ b/simpleForm.html
@@ -60,6 +60,7 @@
     text.addEventListener('input', function(){
      let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
      if(nameRegex.test(text.Value))
+     textError.textContent="";
      textError.textContent = "Name is incorrect";
     });
  
