--- a/simpleForm.html
+++ b/simpleForm.html
@@ -11,16 +11,17 @@
  <form>
     <header class="headerContainer"><h1>HTML 5 Form Input Fields</h1></header>
     <div>
-      <label for="text">text input type for Name:</label>
-      <input type="text" id="text" name="text">
-      <error-output class="text-error" for="text"></error-output>
+      <label for = "text">First Name</label>
+      <input type = "text" id ="text" name ="text" >
+      <error-output class ="text-error" for ="text"></error-output>
+  </div>
+    <div>
+      <label for="pwd">password</label>
+      <input type="pwd" id="pwd" name="pwd"/>
+      <error-output class="text-error" for"pwd"></error-output>
     </div>
     <div>
-      <label for="pwd">password input type:</label>
-      <input type="password" id="pwd" name="pwd">
-    </div>
-    <div>
-      <label for="email">email input type:</label>
+      <label for="email">Email</label>
       <input type="email" id="email" name="email">
       <error-output class="email-error" for="email"></error-output>
     </div>
@@ -57,38 +58,50 @@
  </form>
  <script>
 
-    const text = document.querySelector('#text');
+    const text = document.querySelector('#text'); 
     const textError = document.querySelector('.text-error');
-    text.addEventListener('input', function(){
-     let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
-     if(nameRegex.test(text.Value))
-     textError.textContent="";
-     textError.textContent = "Name is incorrect";
+    text.addEventListener('input',function(){
+    let firstNameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
+    if(firstNameRegex.test(text.value))
+    textError.textContent = "";
+    else textError.textContent = "First Name is Incorrect";
     });
 
-    const email = document.querySelector('#email');
-    const mailError = document.querySelector('.email-error');
+    const email=document.querySelector("#email");
+    const emailError=document.querySelector(".email-error");
     email.addEventListener('input',function(){
-    let emailRegex = RegExp('^[a-z]+([_+-.]?[a-z0-9]+)*[@][a-z0-9]+[.]([a-z]+){2,}([.]?[a-z]{2})?$')
-    if(emailRegex.test(email.Value))
-        mailError.textContent="";
-        else
-        mailError.textContent="invalid email";
+    let emailRegex=RegExp('^[a-zA-Z0-9+-]+(?:\\.[a-zA-Z0-9-]+)*@[a-zA-Z0-9]+(?:\\.[a-zA-Z]{2,}){1,2}$');      
+    if(emailRegex.test(email.value))
+    emailError.textContent="";
+    else emailError.textContent="Email is Incorrect";
     });
 
     const mobileNumber = document.querySelector('#tel');
     const mobileError = document.querySelector('.tel-error');
     tel.addEventListener('input', function(){
-    let mobileRegex = RegExp('[0-9]{2}\\')
+    let mobileRegex = RegExp("(0|91)?\\s{1}[6-9][0-9]{9}");
+    if(mobileRegex.test(mobileNumber.value))
+    mobileError.textContent="";
+    else
+    mobileError.textContent="invalid mobile number";
+
     });
 
     const salary = document.querySelector('#salary')
     const output = document.querySelector('.salary-output')
     output.textContent = salary.value;
-    salary.addEventListener('input', 
-    function(){
+    salary.addEventListener('input', function(){
     output.textContent = salary.value
-})
+  });
+
+    const password = document.querySelector("#password")
+    const passwordError = document.querySelector(".password-error");
+    password.addEventListener("Input",function() {
+    let passwordREpression = RegExp("^(?=.[a-z])(?=.[A-Z])(?=.\d)(?=.[@$!%?&])[A-Za-z\d@$!%?&]{8,}$");
+    if(passwordREpression.test(password.value))
+    passwordError.textContent = "";
+    else passwordError.textContent = "invalidvalid password";
+      });
   </script>
 </body>
 </html>
